# tresleai

./: .dockerignore  .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Jenkinsfile  Makefile  README.md  dev.Dockerfile  dev.Dockerfile.dockerignore  docker-compose.yml  swagger.json
.github/workflows/: deploy.yaml  lint-pr-title.yaml  pr-title-linter.yaml  pr.yaml
configurations/: global.yaml  local.yaml
docs/: kafka.md  troubleshooting-guide.md
src/: admin_ui_api.rs  configuration.rs  main.rs  onboarding.rs  retrieval.rs  service.rs
src/admin_ui_api/: app_delete_handler.rs  app_get_handler.rs  app_get_logs_handler.rs  app_knowledge_nodes_and_errors_count.rs  app_knowledge_nodes_chart_handler.rs  app_knowledge_nodes_errors_handler.rs  app_knowledge_nodes_handler.rs  app_list_handler.rs  app_search_enabled_handler.rs  apps_and_calls_overview_handler.rs  capture_tc_handler.rs  kub_generate_token_handler.rs  metric_calls_handler.rs  metric_error_handler.rs  schema.rs
src/configuration/: environment.rs  settings.rs
src/onboarding/: check_connectivity.rs  check_datasource_change.rs  create_api_key.rs  datasource_connectivity.rs  fetch_api_key.rs  handler.rs  schema.rs  update_api_key_usage.rs  update_app.rs
src/onboarding/datasource_connectivity/: checker.rs  datastore.rs  filestore.rs
src/onboarding/schema/: app_onboarding_request.rs  response.rs
src/retrieval/: fetch_app_name.rs  fetch_from_knowledge_engine.rs  handler.rs  history_handler.rs  schema.rs  update_task_id.rs
src/retrieval/schema/: history_document.rs
src/service/: app_document.rs  check_app_existence.rs  error.rs  generate_and_insert_document.rs  id_document.rs  publish_to_kafka.rs  route.rs  state.rs  ui_summary_document.rs
src/test/: UI-facade-microservice.postman_collection.json  app_config.json  app_config2.json  app_config_bad.json  app_data_source.json  app_data_source_bad.json  capture_request.json  new_app_data_source.json  retrieval_request.json  update_request.json
src/test/sample_requests/: app_onboarding_request.json  retrieval_request.json
