[package]
name = "tresleai-uifacade-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
mongodb = { version = "2.8.2", features = ["bson-chrono-0_4"] }
uuid = "1.7.0"
thiserror = "1.0.61"
reqwest = { version = "0.12.4", features = ["json"] }
kafka = "0.10.0"
rdkafka = { version = "0.36.2", features = ["tokio"] }
futures = "0.3.30"
secrecy = { version = "0.8.0", features = ["serde"] }
config = "0.14.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sqlx = { version = "0.7.4", features = ["mysql", "postgres", "runtime-tokio"] }
urlencoding = "2.1.3"
rand = "0.8.5"
aws-sdk-apigateway = "1.27.0"
aws-config = "1.5.0"
aws-sdk-s3 = "1.31.0"
aws-sdk-iam = "1.28.0"
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
percent-encoding = "2.3.1"
regex = "1.10.4"
kube = "0.92.0"
k8s-openapi = { version = "0.22.0", features = ["v1_30"] }
base64 = "0.22.1"
url = "2.5.0"
bson = "2.10.0"

api-utils = { path = 'submodules/tresleai-utils-common/crates/api-utils' }
authentication-utils = { path = 'submodules/tresleai-utils-common/crates/authentication-utils' }
mongodb-utils = { path = 'submodules/tresleai-utils-common/crates/mongodb-utils' }
kafka-utils = { path = 'submodules/tresleai-utils-common/crates/kafka-utils' }
s3-utils = { path = "submodules/tresleai-utils-common/crates/s3-utils" }
error-utils = { path = "submodules/tresleai-utils-common/crates/error-utils" }
logging-utils = { path = 'submodules/tresleai-utils-common/crates/logging-utils' }
relational-db-utils = { path = 'submodules/tresleai-utils-common/crates/relational-db-utils' }
opensearch-utils = { path = 'submodules/tresleai-utils-common/crates/opensearch-utils' }
llm-chain = { path = 'submodules/tresleai-utils-common/crates/llm-chain-utils/crates/llm-chain' }

[dev-dependencies]
anyhow = "1.0.82"
tempfile = "3.10.1"
mockito = "1.4.0"
once_cell = "1.19.0"
tracing-test = "0.2.5"
